# bonak

./: .gitignore  .gitmodules  .lia.cache  Category.v  Makefile  Makefile.conf  README.md  Relational.v  _CoqProject  bonak.opam  dune-project  gendoc.sh
.github/workflows/: coq-action.yml
Category/: Cat.v
HoTT/: Basics.v  SProp.v  ZFC.v  basics.v
category/: README.md  cat.v  ncat.v
docs/: Bonak.νSet.HSet.html  Bonak.νSet.LeSProp.html  Bonak.νSet.Notation.html  Bonak.νSet.RewLemmas.html  Bonak.νSet.SigT.html  Bonak.νSet.νSet.html  Bonak.νType.HSet.html  Bonak.νType.LeInductive.html  Bonak.νType.LeYoneda.html  Bonak.νType.Notation.html  Bonak.νType.RewLemmas.html  Bonak.νType.νType.html  index.html
hr25/: Bonak.νType.HSet.html  Bonak.νType.LeYoneda.html  Bonak.νType.Notation.html  Bonak.νType.νType.html  index.html
notes/: Makefile  relational.tex  valis.v
paper/: .gitignore  abstract  art.cls  biblio-en.bib  bibspacing.sty  colorpal.sty  ct.sty  depstream.v  extra.bib  iterated-cube.tex  joinargs.sty  lics23  lim.sty  macros.tex  msc.cls  msclike.bst  mscs-response.txt  nestthms.sty  notes.tex  paper.bib  paper.tex  param2.tex  response  restruct-new.tex  restruct.tex  sset.sty  tab-coh-ett.tex  tab-coh.tex  tab-cohext.tex  tab-cohid.tex  tab-cohqr.tex  tab-cohrq.tex  tab-coind.tex  tab-core.tex  tab-faces-ett.tex  tab-faces.tex  tab-frames.tex  tab-idcoh.tex  tab-refl-coh-ett.tex  tab-refl-cohid-ett.tex  (+7 more)
paper/journal-review/: mscs-report1.rev.txt  mscs-report1.txt  mscs-report2.rev.txt  mscs-response.rev.txt
theories/: dune
theories/Basics/: Basics.v  SProp.v  Types.v
theories/Category/: Commutative.v  NCat.v  README.md
zfc/: zfc.v
(+40 files in other folders)
