opam-version: "2.0"
name: "bonak"
version: "master"
synopsis: "An iterated Grothendieck construction of semi-cubical types"
maintainer: "Ramkumar Ramachandra <r@artagnon.com>"
authors: [ "Ramkumar Ramachandra <r@artagnon.com>"
           "Hugo Herbelin <hugo.herbelin@inria.fr>" ]
license: "MIT"
homepage: "https://github.com/artagnon/bonak"
bug-reports: "https://github.com/artagnon/bonak/issues"
dev-repo: "https://github.com/artagnon/bonak"
depends: [
  "coq"  { >= "8.15.0" }
  "dune" { >= "2.9.1" }
]
build: [
  ["dune" "build"]
]
