opam-version: "2.0"
name: "bonak"
version: "master"
synopsis: "An indexed construction of semi-simplicial and semi-cubical types"
maintainer: "Ramkumar Ramachandra <r@artagnon.com>"
authors: [ "Ramkumar Ramachandra <r@artagnon.com>"
           "Hugo Herbelin <hugo.herbelin@inria.fr>" ]
license: "MIT"
homepage: "https://github.com/artagnon/bonak"
bug-reports: "https://github.com/artagnon/bonak/issues"
dev-repo: "git://github.com/artagnon/bonak"
depends: [
  "coq"  { >= "8.15.2" & < "8.16"}
  "dune" { >= "3.4.1" }
]
build: [
  ["dune" "build"]
]
url {
  src: "https://github.com/artagnon/bonak.git#master"
}

